# LSFCCommissionCornerTracker

./: .gitignore  README.md  pyproject.toml  workspace.toml
bases/cctracker/server/: __init__.py  auth.py  config.py  core.py  helpers.py  seat_expiration_helper.py
bases/cctracker/server/api/: admin.py  artist.py  auth.py  event_artist.py  events.py  seats.py  user.py
components/cctracker/api_artist/: __init__.py
components/cctracker/api_event_main/: __init__.py
components/cctracker/api_event_management/: __init__.py
components/cctracker/artist/: __init__.py  core.py
components/cctracker/cache/: __init__.py  core.py
components/cctracker/db/: __init__.py  core.py  models.py
components/cctracker/event/: __init__.py  artist.py  core.py  details.py  management.py
components/cctracker/fs/: __init__.py  core.py
components/cctracker/log/: __init__.py  core.py
components/cctracker/models/: __init__.py  artists.py  errors.py  events.py  permissions.py
development/: __init__.py  config.py  jwt.py  jwt_dev.py  jwt_test.py  minio_dev.py  multireturn.py  pydantic_dev.py  pydantic_test.py  sqlalchemy_playground.py  valkey_playground.py
projects/: docker-compose.yml
projects/cctracker_server/: pyproject.toml
projects/docker_data/db/initdb.d/: init.sql
test/bases/cctracker/server/: conftest.py  test_core.py  test_event_api.py
test/components/cctracker/api_artist/: test_core.py
test/components/cctracker/api_event_main/: test_core.py
test/components/cctracker/api_event_management/: test_core.py
test/components/cctracker/artist/: test_core.py
test/components/cctracker/db/: test_core.py
test/components/cctracker/event/: test_core.py
test/components/cctracker/log/: test_core.py
test/components/cctracker/models/: test_event_models.py
www/CommissionCornerTracker/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.js
www/CommissionCornerTracker/src/: index.css  main.tsx  routeTree.gen.ts  styles.css
www/CommissionCornerTracker/src/api/: artists.ts  events.ts
www/CommissionCornerTracker/src/components/: DoubleClickButton.tsx  table.tsx
www/CommissionCornerTracker/src/components/events/: ArtistDetails.tsx  ArtistSeat.tsx  EventSeats.tsx
www/CommissionCornerTracker/src/contexts/: AuthContext.tsx
www/CommissionCornerTracker/src/routes/: __root.tsx  events.tsx  events_.$eventId.admin.tsx  events_.$eventId.artist.tsx  events_.$eventId.index.tsx  events_.$eventId.tsx  index.tsx
