[project]
name = "cctacker"
version = "0.1.0"
description = "Tracks Time and tables remaining in the LSFC Commission corner"
authors = [
    {name = "Alex Hirschfeld",email = "alex@d-qoi.com"}
]
license = {text = "GPLv3"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.118.0,<0.119.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "pydantic-extra-types (>=2.10.5,<3.0.0)",
    "itsdangerous (>=2.2.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["cctacker"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true

[tool.pyright]
pythonVersion = "3.13"
pythonPlatform = "Linux"
reportMissingImports = true
reportUnusedImport = true

[dependency-groups]
dev = [
    "black (>=25.9.0,<26.0.0)",
    "isort (>=6.0.1,<7.0.0)"
]
